--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
+    "bootswatch": "^4.1.3",
     "chalk": "^2.4.1",
     "compression": "1.7.2",
     "cross-env": "5.2.0",
