--- a/package.json
+++ b/package.json
@@ -145,10 +145,10 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "bootswatch": "^4.1.3",
     "chalk": "^2.4.1",
     "compression": "1.7.2",
     "cross-env": "5.2.0",
+    "debug": "^4.0.1",
     "express": "4.16.3",
     "fontfaceobserver": "2.0.13",
     "history": "4.7.2",
@@ -158,10 +158,12 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "lodash": "4.17.10",
+    "midi-json-parser": "^4.2.41",
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
     "react": "16.4.1",
     "react-dom": "16.4.1",
+    "react-dropzone": "^5.1.0",
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
     "react-loadable": "5.4.0",
