--- a/package.json
+++ b/package.json
@@ -158,7 +158,7 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "lodash": "4.17.10",
-    "midi-json-parser": "^4.2.41",
+    "midiate": "^1.0.1",
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
     "react": "16.4.1",
