--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
     "react-loadable": "5.4.0",
+    "react-pose": "^3.3.3",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
