--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "chalk": "^2.4.1",
+    "chroma-js": "^1.3.7",
     "compression": "1.7.2",
     "cross-env": "5.2.0",
     "debug": "^4.0.1",
