--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
     "react": "16.4.1",
+    "react-alice-carousel": "^1.11.0",
     "react-dom": "16.4.1",
     "react-dropzone": "^5.1.0",
     "react-helmet": "5.2.0",
