--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "bootstrap": "^4.1.3",
     "circular-dependency-plugin": "5.0.2",
     "coveralls": "3.0.1",
     "css-loader": "0.28.11",
@@ -229,6 +230,7 @@
     "lint-staged": "7.2.0",
     "ngrok": "3.0.1",
     "node-plop": "0.15.0",
+    "node-sass": "^4.9.3",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.5",
     "plop": "2.0.0",
@@ -236,6 +238,7 @@
     "prettier": "1.13.5",
     "react-test-renderer": "16.4.1",
     "rimraf": "2.6.2",
+    "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
     "style-loader": "0.21.0",
     "stylelint": "9.3.0",
