--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "whatwg-fetch": "2.0.4"
   },
   "devDependencies": {
+    "@creative-tim-official/argon-dashboard-free": "^1.0.0",
     "add-asset-html-webpack-plugin": "2.1.3",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
